--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
+  },
+  "dependencies": {
+    "react-icons": "^4.7.1"
   }
 }
